updated h1 styles and fixed homepage overlap

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,11 @@
   height: 100%;
 }
 
+h1 {
+  font-family: 'reeyregular';
+  line-height: 1.5;
+}
+
 a {
   color: #568c87;
   text-decoration: none;
