--- a/src/blocks/Intro.css
+++ b/src/blocks/Intro.css
@@ -12,6 +12,7 @@
 
 .App-header h1 {
   margin-top: 0;
+  line-height: 4;
 }
 
 .date {
